template/merge-bot/merge-bot-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: merge-bot
  name: merge-bot
