template/merge-bot/merge-bot-ledisdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: merge-bot
  name: merge-bot-ledisdb
  namespace: merge-bot
spec:
  ports:
  - port: 6380
  selector:
    app: merge-bot
    role: ledisdb
