template/merge-bot/merge-bot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: merge-bot
    romulus/lb: vulcan
    romulus/route: public
  name: merge-bot
  namespace: merge-bot
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: merge-bot
